RESOLVED FIXED16306
Assertion failed in WebCore/loader/FrameLoader.cpp:4642
https://bugs.webkit.org/show_bug.cgi?id=16306
Summary Assertion failed in WebCore/loader/FrameLoader.cpp:4642
Michael Graham
Reported 2007-12-05 05:33:25 PST
I have just build webkit with gtk and debug and an assertion fails on startup ASSERT(!m_didDispatchDidCommitLoad); I attached to the process and I can see what is going on (fixing is a whole other ball game!) * dispatchDidCommitLoad is called and m_didDispatchDidCommitLoad is set true * checkLoadCompleteForThisFrame is called and we return early because m_creatingInitialEmptyDocument==true * dispatchDidCommitLoad is called and the assertion fails
Attachments
patch (1.56 KB, patch)
2007-12-05 10:44 PST, Darin Adler
aroben: review+
Alp Toker
Comment 1 2007-12-05 07:04:01 PST
The assertion added in r28399 is causing this issue.
David Kilzer (:ddkilzer)
Comment 2 2007-12-05 08:30:00 PST
I'm not seeing this with a local debug build of WebKit r28434 on Mac OS X 10.4.11 (8S165).
Alp Toker
Comment 3 2007-12-05 08:54:13 PST
(In reply to comment #2) > I'm not seeing this with a local debug build of WebKit r28434 on Mac OS X > 10.4.11 (8S165). > The reports of this issue I've seen have been in the GTK+, suggesting that either the assertion is identifying something we're doing wrong in the port, or the assertion is too strict and needs to be removed. 5 - added an assertion for a situation that leads to a Safari assertion: 6 a commit that is not followed by a load completion http://trac.webkit.org/projects/webkit/changeset/28399 Sounds like this may be a bug we need to fix in the GTK+ port rather than just removing the assertion and moving on. Darin, Kevin, any thoughts?
Darin Adler
Comment 4 2007-12-05 10:44:34 PST
Adam Roben (:aroben)
Comment 5 2007-12-05 11:07:05 PST
Comment on attachment 17720 [details] patch r=me
Note You need to log in before you can comment on or make changes to this bug.