        Reviewed by Adam Roben.

- fix http://bugs.webkit.org/show_bug.cgi?id=16306
          Assertion failed in WebCore/loader/FrameLoader.cpp:4642

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::dispatchDidCommitLoad): Check m_creatingInitialEmptyDocument
        and don't deliver the client call in that case.



git-svn-id: svn://svn.chromium.org/blink/trunk@28461 bbb929c8-8fbe-4397-9dbb-9b2b20218538