third_party/WebKit/WebCore/loader/FrameLoader.cpp
@@ -508,7 +508,7 @@ void FrameLoader::submitFormAgain()
 void FrameLoader::submitForm(const char* action, const String& url, PassRefPtr<FormData> formData,
     const String& target, const String& contentType, const String& boundary, Event* event)
 {
-    ASSERT(formData.get());
+    ASSERT(formData);
     
     KURL u = completeURL(url.isNull() ? "" : url);
     // FIXME: Do we really need to special-case an empty URL?
@@ -4648,6 +4648,9 @@ bool FrameLoader::shouldTreatSchemeAsLocal(const String& scheme)
 
 void FrameLoader::dispatchDidCommitLoad()
 {
+    if (m_creatingInitialEmptyDocument)
+        return;
+
 #ifndef NDEBUG
     ASSERT(!m_didDispatchDidCommitLoad);
     m_didDispatchDidCommitLoad = true;
